--- a/Projeto2_layout.ipynb
+++ b/Projeto2_layout.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,75 +342,103 @@
     "from numpy import arange\n",
     "from numpy import percentile\n",
     "import numpy as np\n",
-    "from matplotlib.font_manager import FontProperties"
+    "from matplotlib.font_manager import FontProperties\n",
+    "import string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'split'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-81-4b2c3e4fa573>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#texto_relev1 = str(texto_relev1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m#cleanup(texto_relev1_)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mtexto_relev1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexto_relev1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mrelev1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcleanup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexto_relev1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mrelev1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'split'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#FILTRANDO TODOS OS TWEETS RELEVENATES\n",
+    "# FILTRANDO TODOS OS TWEETS RELEVENATES\n",
     "relev = tweets.loc[:,['Treinamento','Relevante']]\n",
     "#FILTRANDO OS TWEETS DE ACORDO COM SUA RELEVANCIA (=1,=2,=3)\n",
     "relev1 = tweets.loc[tweets.Relevante==1]\n",
+    "relev2 = tweets.loc[tweets.Relevante==2]\n",
+    "relev3 = tweets.loc[tweets.Relevante==3]\n",
     "texto_relev1_ = relev1.Treinamento\n",
-    "#texto_relev1 = str(texto_relev1)\n",
-    "#cleanup(texto_relev1_)\n",
-    "texto_relev1 = pd.Series(texto_relev1.split())\n",
-    "relev1 = cleanup(str(texto_relev1))\n",
-    "relev1"
+    "texto_relev2_ = relev2.Treinamento\n",
+    "texto_relev3_ = relev3.Treinamento\n",
+    "\n",
+    "#SEPARANDO CADA GRUPO DE RELEVANCIA PARA UM ARQUIVO CSV\n",
+    "texto_relev1_.to_csv('relev1.csv', header=True, index=False, encoding='utf-8')\n",
+    "texto_relev2_.to_csv('relev2.csv', header=True, index=False, encoding='utf-8')\n",
+    "texto_relev3_.to_csv('relev3.csv', header=True, index=False, encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ABRINDO OS ARQUIVOS CSV\n",
+    "#primeiro arquivo(relevancia =1)\n",
+    "df1 = pd.read_csv('relev1.csv')\n",
+    "df1 = df1.dropna(axis=0, how = 'any')\n",
+    "#LIMPANDO O TEXTO DE CADA ARQUIVO CSV E DANDO VALUE COUNTS \n",
+    "def removetext(text):\n",
+    "    return ''.join([i if ord(i) < 128 else '' for i in text])\n",
+    "\n",
+    "df1['Treinamento'] = df1['Treinamento'].apply(removetext)\n",
+    "\n",
+    "\n",
+    "relev1_array = df1['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
+    "\n",
+    "#segund arquivo(relevancia = 2)\n",
+    "df2 = pd.read_csv('relev2.csv')\n",
+    "df2 = df2.dropna(axis=0, how = 'any')\n",
+    "df2['Treinamento'] = df2['Treinamento'].apply(removetext)\n",
+    "relev2_array = df2['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
+    "\n",
+    "#terceiro arquivo (relevancia = 3)\n",
+    "df3 = pd.read_csv('relev3.csv')\n",
+    "df3 = df3.dropna(axis=0, how = 'any')\n",
+    "df3['Treinamento'] = df3['Treinamento'].apply(removetext)\n",
+    "relev3_array = df2['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'value_counts'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-68-4c8b4d0b395c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtabela_relev1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtxt_relev1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'value_counts'"
-     ]
+     "data": {
+      "text/plain": [
+       "1      0.746807\n",
+       "2      0.113139\n",
+       "3      0.047445\n",
+       "4      0.023266\n",
+       "6      0.013230\n",
+       "5      0.009580\n",
+       "         ...   \n",
+       "19     0.000456\n",
+       "15     0.000456\n",
+       "145    0.000456\n",
+       "111    0.000456\n",
+       "150    0.000456\n",
+       "323    0.000456\n",
+       "Length: 46, dtype: float64"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "txt_relev1 = cleanup(texto_relev1.lower())\n",
-    "tabela_relev1 = txt_relev1.value_counts()"
+    "rele"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
