--- a/Projeto2_layout.ipynb
+++ b/Projeto2_layout.ipynb
@@ -391,53 +391,79 @@
     "\n",
     "df1['Treinamento'] = df1['Treinamento'].apply(removetext)\n",
     "\n",
-    "\n",
-    "relev1_array = df1['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
-    "\n",
     "#segund arquivo(relevancia = 2)\n",
     "df2 = pd.read_csv('relev2.csv')\n",
     "df2 = df2.dropna(axis=0, how = 'any')\n",
     "df2['Treinamento'] = df2['Treinamento'].apply(removetext)\n",
-    "relev2_array = df2['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
+    "\n",
     "\n",
     "#terceiro arquivo (relevancia = 3)\n",
     "df3 = pd.read_csv('relev3.csv')\n",
     "df3 = df3.dropna(axis=0, how = 'any')\n",
-    "df3['Treinamento'] = df3['Treinamento'].apply(removetext)\n",
+    "df3['Treinamento'] = df3['Treinamento'].apply(removetext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CRIANDO A TABELA DE FREQUENCIA RELETIVA PARA CADA GRUPO DE RELEVANCIA DE UM TWEET\n",
+    "relev1_array = df1['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
+    "relev2_array = df2['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
     "relev3_array = df2['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1      0.746807\n",
-       "2      0.113139\n",
-       "3      0.047445\n",
-       "4      0.023266\n",
-       "6      0.013230\n",
-       "5      0.009580\n",
-       "         ...   \n",
-       "19     0.000456\n",
-       "15     0.000456\n",
-       "145    0.000456\n",
-       "111    0.000456\n",
-       "150    0.000456\n",
-       "323    0.000456\n",
-       "Length: 46, dtype: float64"
+       "eu          0.111111\n",
+       "airpods,    0.055556\n",
+       "cairam      0.055556\n",
+       "corria      0.055556\n",
+       "e           0.055556\n",
+       "nao         0.055556\n",
+       "              ...   \n",
+       "hoje        0.055556\n",
+       "minha       0.055556\n",
+       "gosto       0.055556\n",
+       "Eu          0.055556\n",
+       "orelha      0.055556\n",
+       "acabei      0.055556\n",
+       "Length: 17, dtype: float64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rele"
+    "#CRINDO UMA TABELA DE FREQUENCIA RELATIVA PARA UM TWEET ALEATORIO (FUTURO INPUT)\n",
+    "tweet_teste = 'Eu nao gosto de airpods, eles cairam da minha orelha hoje enquanto eu corria e eu acabei perdendo'\n",
+    "tweet_teste = pd.Series(tweet_teste.split())\n",
+    "tweet_teste_relativo = tweet_teste.value_counts(True)\n",
+    "tweet_teste_relativo"
    ]
   },
   {
