Classificador praticamente completo

--- a/Projeto2_layout.ipynb
+++ b/Projeto2_layout.ipynb
@@ -306,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re \n",
     "\n",
     "def cleanup(text):\n",
-    "    punctuation = '[!\\-.:?;]' # Note que os sinais [] são delimitadores de um conjunto.\n",
+    "    punctuation = '[!\\-.:?;,]' # Note que os sinais [] são delimitadores de um conjunto.\n",
     "    pattern = re.compile(punctuation)\n",
     "    text_subbed = re.sub(pattern, ' ', text)\n",
     "    return text_subbed    "
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 561,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,16 +369,18 @@
     "texto_relev1_ = relev1.Treinamento\n",
     "texto_relev2_ = relev2.Treinamento\n",
     "texto_relev3_ = relev3.Treinamento\n",
+    "texto_relev = relev.Treinamento\n",
     "\n",
     "#SEPARANDO CADA GRUPO DE RELEVANCIA PARA UM ARQUIVO CSV\n",
     "texto_relev1_.to_csv('relev1.csv', header=True, index=False, encoding='utf-8')\n",
     "texto_relev2_.to_csv('relev2.csv', header=True, index=False, encoding='utf-8')\n",
-    "texto_relev3_.to_csv('relev3.csv', header=True, index=False, encoding='utf-8')"
+    "texto_relev3_.to_csv('relev3.csv', header=True, index=False, encoding='utf-8')\n",
+    "texto_relev.to_csv('relev.csv', header=True, index=False, encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 562,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,113 +403,108 @@
     "#terceiro arquivo (relevancia = 3)\n",
     "df3 = pd.read_csv('relev3.csv')\n",
     "df3 = df3.dropna(axis=0, how = 'any')\n",
-    "df3['Treinamento'] = df3['Treinamento'].apply(removetext)"
+    "df3['Treinamento'] = df3['Treinamento'].apply(removetext)\n",
+    "\n",
+    "#arquivo total\n",
+    "dft = pd.read_csv('relev.csv')\n",
+    "dft = dft.dropna(axis=0, how = 'any')\n",
+    "dft['Treinamento'] = dft['Treinamento'].apply(removetext)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 563,
    "metadata": {},
    "outputs": [],
    "source": [
     "#CRIANDO A TABELA DE FREQUENCIA RELETIVA PARA CADA GRUPO DE RELEVANCIA DE UM TWEET\n",
     "relev1_array = df1['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
     "relev2_array = df2['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
-    "relev3_array = df2['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)"
+    "relev3_array = df3['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
+    "relev_array = dft['Treinamento'].str.split(' ',expand = True).stack().value_counts(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
     "#CRIANDO DATAFRAMES PARA OS DIFERENTES GRUPOS DE RELEVANCIA\n",
     "#relev 1\n",
-    "d1 = {'word': relev1_array.index, 'frequency':relev1_array}\n",
-    "df01 = pd.DataFrame(data = d1)\n",
-    "df01['frequency'] = df01['frequency'][df01['frequency'] > 10] \n",
-    "df01 = df01.dropna(axis=0, how = 'any')\n",
-    "df01.to_csv('df_relev1.csv', header=True, index=False, encoding='utf-8')\n",
+    "#d1 = {'word': relev1_array.index, 'frequency':relev1_array}\n",
+    "#df01 = pd.DataFrame(data = d1)\n",
+    "#df01['frequency'] = df01['frequency'][df01['frequency'] > 10] \n",
+    "#df01 = df01.dropna(axis=0, how = 'any')\n",
+    "#df01.to_csv('df_relev1.csv', header=True, index=False, encoding='utf-8')\n",
     "\n",
     "#relev2\n",
-    "d2 = {'word': relev2_array.index, 'frequency':relev2_array}\n",
-    "df02 = pd.DataFrame(data = d2)\n",
-    "df02['frequency'] = df02['frequency'][df02['frequency'] > 10] \n",
-    "df02 = df02.dropna(axis=0, how = 'any')\n",
-    "df02.to_csv('df_relev2.csv', header=True, index=False, encoding='utf-8')\n",
+    "#d2 = {'word': relev2_array.index, 'frequency':relev2_array}\n",
+    "#df02 = pd.DataFrame(data = d2)\n",
+    "#df02['frequency'] = df02['frequency'][df02['frequency'] > 10] \n",
+    "#df02 = df02.dropna(axis=0, how = 'any')\n",
+    "#df02.to_csv('df_relev2.csv', header=True, index=False, encoding='utf-8')\n",
     "\n",
     "#relev 3\n",
-    "d3 = {'word': relev3_array.index, 'frequency':relev3_array}\n",
-    "df03 = pd.DataFrame(data = d3)\n",
-    "df03['frequency'] = df03['frequency'][df03['frequency'] > 10] \n",
-    "df03 = df03.dropna(axis=0, how = 'any')\n",
-    "df03.to_csv('df_relev3.csv', header=True, index=False, encoding='utf-8')"
+    "#d3 = {'word': relev3_array.index, 'frequency':relev3_array}\n",
+    "#df03 = pd.DataFrame(data = d3)\n",
+    "#df03['frequency'] = df03['frequency'][df03['frequency'] > 10] \n",
+    "#df03 = df03.dropna(axis=0, how = 'any')\n",
+    "#df03.to_csv('df_relev3.csv', header=True, index=False, encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [],
    "source": [
     "#CRINDO UMA TABELA DE FREQUENCIA RELATIVA PARA UM TWEET ALEATORIO (FUTURO INPUT)\n",
-    "tweet_teste = 'Eu nao gosto de airpods, eles cairam da minha orelha hoje enquanto eu corria e eu acabei perdendo'\n",
+    "tweet_teste = 'era só um airpods na minha vida msm, sonho'\n",
     "tweet_teste = tweet_teste.lower()\n",
     "tweet_teste = cleanup(tweet_teste.lower())\n",
     "tweet_teste = pd.Series(tweet_teste.split())\n",
-    "tweet_teste_relativo = tweet_teste.value_counts(True)\n",
-    "\n"
+    "tweet_teste_relativo = tweet_teste.value_counts(True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eu\n",
-      "nao\n",
-      "gosto\n",
-      "de\n",
-      "airpods,\n",
-      "eles\n",
-      "cairam\n",
-      "da\n",
-      "minha\n",
-      "orelha\n",
-      "hoje\n",
-      "enquanto\n",
-      "eu\n",
-      "corria\n",
-      "e\n",
-      "eu\n",
-      "acabei\n",
-      "perdendo\n"
-     ]
-    }
-   ],
    "source": [
-    "for palavra in tweet_teste:\n",
-    "    "
+    "#PROBABILIDADE DE UMA PALAVRA EM UM TWEET ALEATORIO (VERIFICAR REPETIDAS)\n",
+    "P1 = 1\n",
+    "P2 = 1 \n",
+    "P3 = 1\n",
+    "\n",
+    "def robo(tweet_teste,P1,P2,P3):\n",
+    "    tweet_teste = str(tweet_teste)\n",
+    "    tweet_teste = tweet_teste.lower()\n",
+    "    tweet_teste = cleanup(tweet_teste)\n",
+    "    tweet_teste = removetext(tweet_teste)\n",
+    "    tweet_teste = pd.Series(tweet_teste.split())\n",
+    "    lista_tweet = list(tweet_teste)\n",
+    "    for palavra in lista_tweet:\n",
+    "        prob = (lista_tweet.count(palavra))/(len(lista_tweet))\n",
+    "        if palavra not in relev1_array or palavra not in relev2_array or palavra not in relev3_array:\n",
+    "            palavra=1e-20\n",
+    "        else: \n",
+    "            prob = (lista_tweet.count(palavra))/(len(lista_tweet))\n",
+    "            P1*= relev1_array[palavra]*prob\n",
+    "            P2*= relev2_array[palavra]*prob\n",
+    "            P3*= relev3_array[palavra]*prob\n",
+    "        x = [P1,P2,P3]\n",
+    "        if P1>P2 and P1>P3:\n",
+    "            return 1\n",
+    "        elif P2>P1 and P2>P3:\n",
+    "            return 2\n",
+    "        elif P3>P1 and P3>P2:\n",
+    "            return 3\n",
+    "    \n",
+    "    \n",
+    "    \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -521,9 +518,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "### Verificando a performance\n",
-    "\n",
-    "Agora você deve testar o seu classificador com a base de Testes."
+    "### Verificando a performance\n"
    ]
   },
   {
@@ -535,10 +530,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ABRINDO UM DATAFRAME E USANDO O CLASSIFICADOR (CRIANDO NOVO COLUNA DE CLASSIFICADOR NO DATAFRAME)\n",
+    "\n",
+    "def classificador(df):\n",
+    "    df1 = pd.read_excel('{0}'.format(df))\n",
+    "    df1['Classificador']= 0\n",
+    "    cont = 0\n",
+    "    for tweet in df1['Teste']:\n",
+    "        tweet = cleanup(str(tweet))\n",
+    "        y = robo(tweet,1,1,1)\n",
+    "        df1.loc[cont,'Classificador']=y\n",
+    "        cont+=1\n",
+    "    return df1.loc[:,['Teste','Relevante.1','Classificador']]\n",
+    "    \n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 550,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TESTANDO O CLASSIFICADOR COM O DATAFRAME DE TESTE\n",
+    "x = 'airpods1.xlsx'\n",
+    "\n",
+    "teste =classificador(x)\n",
+    "#descomentar a linha abaixo para ver o resultado\n",
+    "#teste\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 555,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculadora de porcentagem de acertos\n",
+    "def calcula_acerto(teste):\n",
+    "    i = 0 \n",
+    "    contador = 0 \n",
+    "    while i < 249:\n",
+    "        if teste['Relevante.1'][i]== teste['Classificador'][i]:\n",
+    "            contador +=1\n",
+    "        i+=1\n",
+    "    porcentagem = (contador/249)*100\n",
+    "    return ('A porcentagem de acerto foi de {0}%'.format(porcentagem))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 557,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A porcentagem de acerto foi de 38.55421686746988%'"
+      ]
+     },
+     "execution_count": 557,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calcula_acerto(teste)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Montando o classificador Naive Bayes de outra forma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 594,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#definindo interseccoes\n",
+    "#interseccao r1 e rt\n",
+    "set_relev1 = set(relev1_array.index)\n",
+    "set_relev = set(relev_array.index)\n",
+    "inter_R1_RT = set_relev1.intersection(set_relev)\n",
+    "lista1 = list(inter_R1_RT)\n",
+    "pr1 = len(lista1)/(len(relev_array))\n",
+    "\n",
+    "\n",
+    "#interseccao r2 e rt\n",
+    "set_relev2 = set(relev2_array.index)\n",
+    "set_relev = set(relev_array.index)\n",
+    "inter_R2_RT = set_relev2.intersection(set_relev)\n",
+    "lista2 = list(inter_R2_RT)\n",
+    "pr2 = len(lista2)/(len(relev_array))\n",
+    "\n",
+    "#interseccao r3 e rt\n",
+    "set_relev3 = set(relev3_array.index)\n",
+    "set_relev = set(relev_array.index)\n",
+    "inter_R3_RT = set_relev3.intersection(set_relev)\n",
+    "lista3 = list(inter_R3_RT)\n",
+    "pr3 = len(lista3)/(len(relev_array))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 610,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#robo de probabilidade\n",
+    "def robo_1(tweet_teste,P1,P2,P3,pr1,pr2,pr3):\n",
+    "    tweet_teste = str(tweet_teste)\n",
+    "    tweet_teste = tweet_teste.lower()\n",
+    "    tweet_teste = cleanup(tweet_teste)\n",
+    "    tweet_teste = removetext(tweet_teste)\n",
+    "    tweet_teste = pd.Series(tweet_teste.split())\n",
+    "    lista_tweet = list(tweet_teste)\n",
+    "    for palavra in lista_tweet:\n",
+    "        if palavra not in relev1_array or palavra not in relev2_array or palavra not in relev3_array:\n",
+    "            palavra=1e-20\n",
+    "        else: \n",
+    "            P1*= relev1_array[palavra]*pr1\n",
+    "            P2*= relev2_array[palavra]*pr2\n",
+    "            P3*= relev3_array[palavra]*pr3\n",
+    "        x = [P1,P2,P3]\n",
+    "        if P1>P2 and P1>P3:\n",
+    "            return 1\n",
+    "        elif P2>P1 and P2>P3:\n",
+    "            return 2\n",
+    "        elif P3>P1 and P3>P2:\n",
+    "            return 3\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 615,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#classificador \n",
+    "def classificador_1(df,pr1,pr2,pr3):\n",
+    "    df1 = pd.read_excel('{0}'.format(df))\n",
+    "    df1['Classificador']= 0\n",
+    "    cont = 0\n",
+    "    for tweet in df1['Teste']:\n",
+    "        y = robo_1(tweet,1,1,1,pr1,pr2,pr3)\n",
+    "        df1.loc[cont,'Classificador']=y\n",
+    "        cont+=1\n",
+    "    return df1.loc[:,['Teste','Relevante.1','Classificador']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 616,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rodando o primeiro classificador\n",
+    "x = 'airpods1.xlsx'\n",
+    "teste1= classificador_1(x,pr1,pr2,pr3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 617,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculadora de porcentagem de acerto\n",
+    "def calcula_acerto_1(teste):\n",
+    "    i = 0 \n",
+    "    contador = 0 \n",
+    "    while i < 249:\n",
+    "        if teste['Relevante.1'][i]== teste['Classificador'][i]:\n",
+    "            contador +=1\n",
+    "        i+=1\n",
+    "    porcentagem = (contador/249)*100\n",
+    "    return ('A porcentagem de acerto foi de {0}%'.format(porcentagem))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 618,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A porcentagem de acerto foi de 50.602409638554214%'"
+      ]
+     },
+     "execution_count": 618,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calcula_acerto_1(teste1)"
+   ]
   },
   {
    "cell_type": "code",
