Falta os textos

--- a/Projeto2_RodrigoMattar_LuccaNazari.ipynb
+++ b/Projeto2_RodrigoMattar_LuccaNazari.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 888,
+   "execution_count": 1021,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 889,
+   "execution_count": 1022,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 890,
+   "execution_count": 1023,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 891,
+   "execution_count": 1024,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 892,
+   "execution_count": 1025,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 893,
+   "execution_count": 1026,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,20 +413,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 894,
+   "execution_count": 1027,
    "metadata": {},
    "outputs": [],
    "source": [
     "#CRIANDO A TABELA DE FREQUENCIA RELETIVA PARA CADA GRUPO DE RELEVANCIA DE UM TWEET\n",
-    "relev1_array = df1['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
-    "relev2_array = df2['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
-    "relev3_array = df3['Treinamento'].str.split(' ', expand=True).stack().value_counts(True)\n",
-    "relev_array = dft['Treinamento'].str.split(' ',expand = True).stack().value_counts(True)"
+    "relev1_array = df1['Treinamento'].str.split(' ', expand=True).stack().value_counts()\n",
+    "relev2_array = df2['Treinamento'].str.split(' ', expand=True).stack().value_counts()\n",
+    "relev3_array = df3['Treinamento'].str.split(' ', expand=True).stack().value_counts()\n",
+    "relev_array = dft['Treinamento'].str.split(' ',expand = True).stack().value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 895,
+   "execution_count": 1028,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 896,
+   "execution_count": 1029,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,12 +464,12 @@
     "tweet_teste = tweet_teste.lower()\n",
     "tweet_teste = cleanup(tweet_teste.lower())\n",
     "tweet_teste = pd.Series(tweet_teste.split())\n",
-    "tweet_teste_relativo = tweet_teste.value_counts(True)\n"
+    "tweet_teste_relativo = tweet_teste.value_counts(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 897,
+   "execution_count": 1030,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,17 +487,17 @@
     "    lista_tweet = list(tweet_teste)\n",
     "    for palavra in lista_tweet:\n",
     "        if palavra not in relev1_array:\n",
-    "            P1*=1/(len(relev1_array)+len(relev_array))\n",
+    "            P1*=1/(sum(relev1_array)+len(relev_array))\n",
     "        else: \n",
-    "            P1*=(relev1_array[palavra]+1)/(len(relev1_array)+len(relev_array))\n",
+    "            P1*=(relev1_array[palavra]+1)/(sum(relev1_array)+len(relev_array))\n",
     "        if palavra not in relev2_array:\n",
-    "            P2*=1/(len(relev2_array)+len(relev_array))\n",
+    "            P2*=1/(sum(relev2_array)+len(relev_array))\n",
     "        else: \n",
-    "            P2*= (relev2_array[palavra]+1)/(len(relev2_array+len(relev_array)))\n",
+    "            P2*= (relev2_array[palavra]+1)/(sum(relev2_array)+len(relev_array))\n",
     "        if palavra not in relev3_array:\n",
-    "            P3*=1/(len(relev3_array)+len(relev_array))\n",
+    "            P3*=1/(sum(relev3_array)+len(relev_array))\n",
     "        else:\n",
-    "            P3*=(relev3_array[palavra]+1/(len(relev3_array+len(relev_array))))\n",
+    "            P3*=(relev3_array[palavra]+1/(sum(relev3_array)+len(relev_array)))\n",
     "        P1=P1*pr1\n",
     "        P2=P2*pr2\n",
     "        P3=P3*pr3\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 898,
+   "execution_count": 1031,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 899,
+   "execution_count": 1032,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "[762 rows x 3 columns]"
       ]
      },
-     "execution_count": 899,
+     "execution_count": 1032,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 900,
+   "execution_count": 1033,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,23 +723,24 @@
     "        if teste['Relevante.1'][i]== teste['Classificador'][i]:\n",
     "            contador +=1\n",
     "        i+=1\n",
-    "    porcentagem = (contador/249)*100\n",
+    "    porcentagem = (contador/248)*100\n",
+    "    porcentagem = round(porcentagem)\n",
     "    return ('A porcentagem de acerto foi de {0}%'.format(porcentagem))\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 901,
+   "execution_count": 1034,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'A porcentagem de acerto foi de 39.75903614457831%'"
+       "'A porcentagem de acerto foi de 40%'"
       ]
      },
-     "execution_count": 901,
+     "execution_count": 1034,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 902,
+   "execution_count": 1035,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,12 +782,13 @@
     "set_relev = set(relev_array.index)\n",
     "inter_R3_RT = set_relev3.intersection(set_relev)\n",
     "lista3 = list(inter_R3_RT)\n",
-    "pr3 = len(lista3)/(len(relev_array)) #porcentagem  de palavras que aparecem na interseccao\n"
+    "pr3 = len(lista3)/(len(relev_array)) #porcentagem  de palavras que aparecem na interseccao\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 909,
+   "execution_count": 1036,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,12 +802,11 @@
     "    lista_tweet = list(tweet_teste)\n",
     "    for palavra in lista_tweet:\n",
     "        if palavra not in relev1_array or palavra not in relev2_array or palavra not in relev3_array:\n",
-    "            palavra = 1/len(relev_array)\n",
+    "            palavra = 1/(sum(relev1_array)+sum(relev2_array)+sum(relev3_array)+len(relev_array))\n",
     "        else:\n",
-    "            prob = (lista_tweet.count(palavra))/len(lista_tweet)\n",
-    "            P1*= (relev1_array[palavra]+1)\n",
-    "            P2*= (relev2_array[palavra]+1)\n",
-    "            P3*= (relev3_array[palavra]+1)\n",
+    "            P1*= (relev1_array[palavra]+1)/(sum(relev1_array)+len(relev_array))\n",
+    "            P2*= (relev2_array[palavra]+1)/(sum(relev2_array)+len(relev_array))\n",
+    "            P3*= (relev3_array[palavra]+1)/(sum(relev3_array)+len(relev_array))\n",
     "        P1=P1*pr1\n",
     "        P2=P2*pr2\n",
     "        P3=P3*pr3\n",
@@ -821,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 910,
+   "execution_count": 1037,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,12 +835,12 @@
     "        y = robo_1(tweet,1,1,1,pr1,pr2,pr3)\n",
     "        df1.loc[cont,'Classificador']=y\n",
     "        cont+=1\n",
-    "    return df1.loc[:249,['Teste','Relevante.1','Classificador']]"
+    "    return df1.loc[:248,['Teste','Relevante.1','Classificador']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 911,
+   "execution_count": 1038,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 912,
+   "execution_count": 1039,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,14 +870,15 @@
     "        if teste['Relevante.1'][i]== teste['Classificador'][i]:\n",
     "            contador +=1\n",
     "        i+=1\n",
-    "    porcentagem = (contador/249)*100\n",
+    "    porcentagem = (contador/248)*100\n",
+    "    porcentagem=round(porcentagem)\n",
     "    return ('A porcentagem de acerto foi de {0}%'.format(porcentagem))\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 913,
+   "execution_count": 1040,
    "metadata": {},
    "outputs": [
     {
@@ -949,6 +951,12 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>hoje sonhei que o wani estragou os meus airpod...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>244</th>\n",
        "      <td>não sabia dos airpods há mais de uma semana......</td>\n",
        "      <td>2.0</td>\n",
@@ -978,15 +986,9 @@
        "      <td>3.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>250 rows × 3 columns</p>\n",
+       "<p>249 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -998,12 +1000,12 @@
        "4    “shawn’s airpods #6” quantos airpods esse meni...          1.0   \n",
        "5                era só um airpods na minha vida mesmo          3.0   \n",
        "..                                                 ...          ...   \n",
+       "243  hoje sonhei que o wani estragou os meus airpod...          1.0   \n",
        "244  não sabia dos airpods há mais de uma semana......          2.0   \n",
        "245  nem queria comprar os airpods, mas agora que v...          3.0   \n",
        "246  preferias comprar 150€ de roupa ou comprar uns...          1.0   \n",
        "247                        os meus airpods chegaram! 😍          3.0   \n",
        "248  airpods é a única coisa que tá salvando minha ...          3.0   \n",
-       "249                                                NaN          NaN   \n",
        "\n",
        "     Classificador  \n",
        "0                1  \n",
@@ -1013,17 +1015,17 @@
        "4                1  \n",
        "5                1  \n",
        "..             ...  \n",
+       "243              1  \n",
        "244              1  \n",
        "245              1  \n",
        "246              1  \n",
        "247              1  \n",
        "248              1  \n",
-       "249              1  \n",
        "\n",
-       "[250 rows x 3 columns]"
+       "[249 rows x 3 columns]"
       ]
      },
-     "execution_count": 913,
+     "execution_count": 1040,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,23 +1036,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 914,
+   "execution_count": 1041,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'A porcentagem de acerto foi de 48.99598393574297%'"
+       "'A porcentagem de acerto foi de 54%'"
       ]
      },
-     "execution_count": 914,
+     "execution_count": 1041,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calcula_acerto_1(teste1)"
+    "w = calcula_acerto_1(teste1)\n",
+    "w"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1044,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Classificador</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Relevante.1</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>0.457831</td>\n",
+       "      <td>0.008032</td>\n",
+       "      <td>0.024096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>0.208835</td>\n",
+       "      <td>0.020080</td>\n",
+       "      <td>0.012048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.0</th>\n",
+       "      <td>0.204819</td>\n",
+       "      <td>0.008032</td>\n",
+       "      <td>0.056225</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Classificador         1         2         3\n",
+       "Relevante.1                                \n",
+       "1.0            0.457831  0.008032  0.024096\n",
+       "2.0            0.208835  0.020080  0.012048\n",
+       "3.0            0.204819  0.008032  0.056225"
+      ]
+     },
+     "execution_count": 1044,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(teste1['Relevante.1'],teste1.Classificador,normalize = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
